OCTOPUS-609: refactor the workflow
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -70,7 +70,8 @@ jobs:
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
         with:
           context: .
-          platforms: linux/amd64,linux/ppc64le
+          # Add linux/amd64, when using in Multi-Arch Compute
+          platforms: linux/ppc64le
           file: Containerfile-numa
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
