--- a/manifests/base/kustomization.yaml
+++ b/manifests/base/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
-  name: fluentd-elasticsearch
-  namespace: kube-system
+  name: openshift-power-workload 
+  namespace: openshift-power-workload
 
 generatorOptions:
   disableNameSuffixHash: true
@@ -11,4 +11,4 @@ sortOptions:
   order: fifo
 
 resources:
-  - DaemonSet.yaml
+  - 01-daemonset.yaml
