--- a/manifests/overlays/multi/kustomization.yaml
+++ b/manifests/overlays/multi/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
-  name: fluentd-elasticsearch
-  namespace: kube-system
+  name: openshift-power-workload
+  namespace: openshift-power-workload
 
 sortOptions:
   order: fifo
