--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -69,7 +69,7 @@ jobs:
         with:
           context: .
           # Add linux/amd64, when using in Multi-Arch Compute
-          platforms: linux/ppc64le
+          platforms: linux/ppc64le,linux/amd64
           file: Containerfile-numa
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
