--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -13,9 +13,9 @@ on:
 
 env:
   # Use docker.io for Docker Hub if empty
-  REGISTRY: ghcr.io
+  REGISTRY: quay.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: powercloud/ocp4-power-workload-tools
 
 jobs:
   build:
