OCTOPUS-609: add numa reporting to output
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,6 +10,9 @@ on:
     branches: [ "main" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
+    paths-ignore:
+      - 'manifests/**'
+      - 'README.md'
 
 env:
   # Use docker.io for Docker Hub if empty
