OCTOPUS-596: refactor the debug service
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/network/dep-debug.yaml
+++ b/manifests/network/dep-debug.yaml
@@ -38,8 +38,8 @@ spec:
         ports:
         - containerPort: 80
           type: TCP
-        command: [ "/bin/sleep" ]
-        args: [ "infinity" ]
+        command: [ "/agnhost" ]
+        args: [ "nettest", "--port", "80" ]
         resources:
           limits:
             memory: 100Mi
