--- a/manifests/network/ds-debug.yaml
+++ b/manifests/network/ds-debug.yaml
@@ -1,12 +1,12 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: DaemonSet
 metadata:
   name: ocp4-net-power-workload
   namespace: openshift-net-workload
   labels:
     app: power-net-workload
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: power-net-workload
@@ -22,19 +22,12 @@ spec:
       - key: node-role.kubernetes.io/master
         operator: Exists
         effect: NoSchedule
+      nodeSelector:
+        kubernetes.io/arch: ppc64le
       containers:
       - name: agnhost
         image: registry.k8s.io/e2e-test-images/agnhost:2.45
         imagePullPolicy: Always
-        affinity:
-          nodeAffinity:
-            requiredDuringSchedulingIgnoredDuringExecution:
-              nodeSelectorTerms:
-              - matchExpressions:
-                - key: kubernetes.io/arch
-                  operator: In
-                  values:
-                  - ppc64le
         ports:
         - containerPort: 8080
           type: TCP
