--- a/manifests/network/ds-debug.yaml
+++ b/manifests/network/ds-debug.yaml
@@ -32,7 +32,7 @@ spec:
         - containerPort: 8080
           type: TCP
         command: [ "/agnhost" ]
-        args: [ "nettest", "--port", "8080" ]
+        args: [ "serve-hostname", "--port", "8080" ]
         resources:
           limits:
             memory: 100Mi
