feat(fio): update container to include script and example fio script
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/fio/03-daemonset.yaml
+++ b/manifests/fio/03-daemonset.yaml
@@ -125,7 +125,7 @@ spec:
         - name: host-sys
           mountPath: /sys
         - name: host-dev
-          mountPath: /dev
+          mountPath: /sys-dev
         serviceAccount: ocp4-workload-sa
         serviceAccountName: ocp4-workload-sa
         securityContext:
