feat(perf-pv): update fio script
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/perf-pv/03-pvc-nfs.yaml
+++ b/manifests/perf-pv/03-pvc-nfs.yaml
@@ -4,9 +4,10 @@ metadata:
   name: workloads-pvc
   namespace: openshift-power-workload
 spec:
-  storageClassName: ibm-spectrum-scale-data-rwo-sc
+  storageClassName: nfs-client
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 4000Gi
+      storage: 10Gi
+  volumeMode: Filesystem
