fix: increase resource.limits for cpu and memory
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/perf-pv/04-daemonset.yaml
+++ b/manifests/perf-pv/04-daemonset.yaml
@@ -32,7 +32,8 @@ spec:
         args: [ "infinity" ]
         resources:
           limits:
-            memory: 100Mi
+            cpu: 4000m
+            memory: 4Gi
           requests:
             cpu: 100m
             memory: 100Mi
