feat(storage-perf-pv): statefulset adds io loadbalancing disabled
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/storage-perf-pv/04-statefulset.yaml
+++ b/manifests/storage-perf-pv/04-statefulset.yaml
@@ -14,6 +14,9 @@ spec:
     metadata:
       labels:
         app: power-workload
+      annotations:
+        cpu-load-balancing.crio.io: "disable"
+        cpu-quota.crio.io: "disable"
     spec:
       containers:
       - name: workload
