--- a/manifests/storage-pv-hostpath/03-pv.yaml
+++ b/manifests/storage-pv-hostpath/03-pv.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: ocp4-data-pv
+  namespace: openshift-power-workload
   labels:
     type: local
 spec:
@@ -19,6 +20,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: data-pvc
+  namespace: openshift-power-workload
 spec:
   accessModes:
     - ReadWriteOnce
