fix: update deployment to point to the imagestream
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/scripts/nx-gzip/manifests/05-deployment.yaml
+++ b/scripts/nx-gzip/manifests/05-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: workload
-        image: quay.io/powercloud/ocp4-power-workload-tools:main
+        image: nx-gzip:latest
         imagePullPolicy: IfNotPresent
         affinity:
           nodeAffinity:
@@ -28,8 +28,7 @@ spec:
                   operator: In
                   values:
                   - true
-        command: [ "/bin/sleep" ]
-        args: [ "infinity" ]
+        command: ["nginx", "-g", "daemon off;"]
         env:
           - name: NX_GZIP_TRACE
             value: "8"
