--- a/scripts/nx-gzip/manifests/04-buildconfig.yaml
+++ b/scripts/nx-gzip/manifests/04-buildconfig.yaml
@@ -15,13 +15,13 @@ spec:
     dockerStrategy:
       from:
         kind: DockerImage
-        name: 'quay.io/centos/centos:stream9'
+        name: 'quay.io/fedora/nginx-126:latest'
   source:
     type: Dockerfile
     dockerfile: |
-      FROM quay.io/centos/centos:stream9
+      FROM quay.io/fedora/nginx-126:latest
       USER root
-      RUN dnf install -y libnxz nginx
+      RUN dnf install -y libnxz
       RUN ln -s /usr/lib/libnxz.so.0.0 /usr/lib/libz.so
       ENTRYPOINT ["LD_PRELOAD=/usr/lib64/libnxz.so.0", "NX_GZIP_TRACE=8", "nginx", "-g", "daemon", "off;"]
   runPolicy: Serial
