fix: need privileged
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/storage-pv-hostpath/04-deployment.yaml
+++ b/manifests/storage-pv-hostpath/04-deployment.yaml
@@ -45,7 +45,7 @@ spec:
         serviceAccount: ocp4-workload-sa
         serviceAccountName: ocp4-workload-sa
         securityContext:
-          privileged: false
+          privileged: true
           capabilities:
             drop:
               - ALL
