--- a/scripts/nx-gzip/manifests/04-buildconfig.yaml
+++ b/scripts/nx-gzip/manifests/04-buildconfig.yaml
@@ -22,6 +22,8 @@ spec:
       FROM quay.io/fedora/nginx-126:latest
       USER root
       RUN dnf install -y libnxz
+      RUN rf -f /usr/lib64/libz.so.1* || true
       RUN ln -s /usr/lib/libnxz.so.0.0 /usr/lib/libz.so
+      RUN ln -s /usr/lib64/libnxz.so.0.0 /usr/lib/libz.so
       ENTRYPOINT ["LD_PRELOAD=/usr/lib64/libnxz.so.0", "NX_GZIP_TRACE=8", "nginx", "-g", "daemon", "off;"]
   runPolicy: Serial
