fix: revert back to centos9 stream
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/scripts/nx-gzip/manifests/04-buildconfig.yaml
+++ b/scripts/nx-gzip/manifests/04-buildconfig.yaml
@@ -15,11 +15,11 @@ spec:
     dockerStrategy:
       from:
         kind: DockerImage
-        name: 'quay.io/fedora/nginx-126:latest'
+        name: 'quay.io/centos/centos:stream9'
   source:
     type: Dockerfile
     dockerfile: |
-      FROM quay.io/fedora/nginx-126:latest
+      FROM quay.io/centos/centos:stream9
       USER root
       RUN dnf install -y libnxz pigz
       RUN mv /usr/lib/libz.so /usr/lib/libz.so.bak
