change path to dev/lib
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/nx-gzip/03-daemonset.yaml
+++ b/manifests/nx-gzip/03-daemonset.yaml
@@ -40,9 +40,9 @@ spec:
         - name: host-sys
           mountPath: /sys
         - name: host-dev
-          mountPath: /host-dev
+          mountPath: /dev
         - name: host-lib
-          mountPath: /host-lib
+          mountPath: /lib
         serviceAccount: ocp4-workload-sa
         serviceAccountName: ocp4-workload-sa
         securityContext:
