fix: missed config files
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/nx-gzip/01-sa.yaml
+++ b/manifests/nx-gzip/01-sa.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: ocp4-workload-sa
-  namespace: openshift-power-workload-fio
+  namespace: nx-gzip
