--- a/manifests/nx-gzip/03-daemonset.yaml
+++ b/manifests/nx-gzip/03-daemonset.yaml
@@ -12,8 +12,7 @@ spec:
   template:
     metadata:
       annotations:
-        openshift.io/required-scc: privileged
-        openshift.io/scc: privileged
+        io.kubernetes.cri-o.Devices: /dev/crypto/nx-gzip
       labels:
         app: power-nx-gzip-workload
     spec:
@@ -29,39 +28,16 @@ spec:
           requests:
             cpu: 4
             memory: 4000Mi
-        volumeMounts:
-        - name: host-sys
-          mountPath: /sys
-        - name: host-dev
-          mountPath: /dev/crypto/nx-gzip
         serviceAccount: ocp4-workload-sa
         serviceAccountName: ocp4-workload-sa
         securityContext:
-          privileged: true
+          privileged: false
           capabilities:
-            add:
-              - CAP_SYS_ADMIN
-              - CAP_FOWNER
-              - NET_ADMIN
-              - SYS_ADMIN
             drop:
               - ALL
           #runAsUser: 0
           #runAsNonRoot: false
           readOnlyRootFilesystem: false
-          allowPrivilegeEscalation: true
-      volumes:
-       - name: host-sys
-         hostPath:
-           path: /sys
-           type: Directory
-       - name: host-dev
-         hostPath:
-           path: /dev/crypto/nx-gzip
-           type: File
-      priorityClassName: system-cluster-critical
-      hostPID: true
-      hostIPC: true
-      hostNetwork: true
+          allowPrivilegeEscalation: false
       serviceAccount: ocp4-workload-sa
       serviceAccountName: ocp4-workload-sa
