--- a/manifests/nx-gzip/01-sa.yaml
+++ b/manifests/nx-gzip/01-sa.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: ocp4-workload-sa
-  namespace: nx-gzip
+  name: nx-gzip-sa
+  namespace: nx-gzip-demo
