fix: daemonset ns was incorrect
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/nx-gzip/03-daemonset.yaml
+++ b/manifests/nx-gzip/03-daemonset.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: nx-gzip-ds
-  namespace: nx-gzip
+  namespace: nx-gzip-demo
   labels:
     app: power-nx-gzip-workload
 spec:
