fix: nx-gzip-sa was improperly referenced
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/manifests/nx-gzip/03-daemonset.yaml
+++ b/manifests/nx-gzip/03-daemonset.yaml
@@ -37,5 +37,5 @@ spec:
               - ALL
           readOnlyRootFilesystem: false
           allowPrivilegeEscalation: false
-      serviceAccount: ocp4-workload-sa
-      serviceAccountName: ocp4-workload-sa
+      serviceAccount: nx-gzip-sa
+      serviceAccountName: nx-gzip-sa
