--- a/manifests/nx-gzip/03-daemonset.yaml
+++ b/manifests/nx-gzip/03-daemonset.yaml
@@ -20,6 +20,13 @@ spec:
       - name: nx-gzip-workload
         image: quay.io/powercloud/ocp4-power-workload-tools:main
         imagePullPolicy: IfNotPresent
+        affinity:
+          nodeAffinity:
+            requiredDuringSchedulingIgnoredDuringExecution:
+              nodeSelectorTerms:
+              - matchExpressions:
+                - key: node-role.kubernetes.io/worker
+                  operator: Exists
         command: [ "/bin/sleep" ]
         args: [ "infinity" ]
         resources:
