--- a/manifests/nx-gzip/03-daemonset.yaml
+++ b/manifests/nx-gzip/03-daemonset.yaml
@@ -23,6 +23,8 @@ spec:
             - matchExpressions:
               - key: node-role.kubernetes.io/worker
                 operator: Exists
+              - key: node-role.kubernetes.io/control-plane
+                operator: DoesNotExist
       containers:
       - name: nx-gzip-workload
         image: quay.io/powercloud/ocp4-power-workload-tools:main
