--- a/manifests/kdump-pmem/03-daemonset.yaml
+++ b/manifests/kdump-pmem/03-daemonset.yaml
@@ -41,6 +41,8 @@ spec:
         volumeMounts:
         - name: host-sys
           mountPath: /sys
+        - name: host-dev
+          mountPath: /dev
         serviceAccount: ocp4-kdump-pmem-setup-sa
         serviceAccountName: ocp4-kdump-pmem-setup-sa
         securityContext:
@@ -59,6 +61,10 @@ spec:
        - name: host-sys
          hostPath:
            path: /sys
+           type: Directory
+       - name: host-dev
+         hostPath:
+           path: /dev
            type: Directory
       priorityClassName: system-cluster-critical
       hostPID: true
